@@ -685,6 +685,9 @@ class Revelation(revelation.widget.App):
 			except revelation.entry.LaunchDataError:
 				revelation.dialog.Error(self, "Missing launcher data", "The entry '" + entry.name + "' does not have all the data required to launch it.").run()
 
+			except revelation.entry.LaunchFormatError:
+				revelation.dialog.Error(self, "Invalid launcher format", "The launch command for '" + entry.typename + "' is invalid, please correct this in the preferences.").run()
+
 
 
 	def entry_remove(self):
